@@ -1,6 +1,8 @@
 s3cmd 0.9.9.92 -  ???
 ==============
 * Added [accesslog] command. (needs manpage!)
+* Added access logging for CloudFront distributions 
+  using [cfmodify --log]
 * Added --acl-grant and --acl-revoke (by Timothee Linden).
 
 s3cmd 0.9.9.91 -  2009-10-08
